--- a/index.html
+++ b/index.html
@@ -13,6 +13,46 @@
 
 <body>
 
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">الرئيسية</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">من نحن</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              الأقسام
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="./program.html" target="_blank">قسم البرمجة</a></li>
+              <li><a class="dropdown-item" href="#">قسم الهندسة</a></li>
+              <li><a class="dropdown-item" href="#">قسم الطب</a></li>
+              <li><a class="dropdown-item" href="#">قسم العلوم</a></li>
+              <li><a class="dropdown-item" href="#">القسم العام</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">اسئلة عن مالك الموقع</a></li>
+            </ul>
+          </li>
+          
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="أبحث عن اي شي" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+
+
 <section class="sec1">
   <div class="container">
     <div class="row">
@@ -305,7 +345,7 @@
 
   <div class="ccard">
     <h4 style="margin-bottom: 11px;">تابعنا</h4>
-<h6><a href="#">انستقرام</a></h6>
+<h6><a href="https://www.instagram.com/bh.adr/" target="_blank">انستقرام</a></h6>
 <h6><a href="#">فيسبوك</a></h6>
 <h6><a href="#">تويتر</a></h6>
 
@@ -341,6 +381,9 @@
     path: './assets/js/3nGjiLMq0u.json' 
   });
 </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
